<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileBooks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="title_activity_book_lists">BookLists</string>
    <string name="title_activity_complete_details">CompleteDetails</string>
    <string name="title_activity_vendors_details">VendorsDetails</string>
    <string name="title_activity_selling">SellingActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login">Login Screen</string>
    <string name="register">Register Screen</string>
    <string name="loginName">Enter name:</string>
    <string name="registerName">Enter name:</string>
    <string name="loginUsername">Enter username: </string>
    <string name="registerUsername">Enter username: </string>
    <string name="loginPassword">Enter password: </string>
    <string name="registerPassword">Enter password: </string>
    <string name="loginEmail">Enter email address: </string>
    <string name="registerEmail">Enter email address: </string>
    <string name="title_activity_amazon">AmazonActivity</string>
    <string name="title_activity_buyer">BuyerActivity</string>

</resources>